[package]
name = "parallel-processor"
version = "0.1.12"
authors = ["Andrea Cracco <guilucand@gmail.com>"]
edition = "2021"
categories = []
description = "Framework to manage asynchronous execution of multiple compute units communicating using messages"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Guilucand/parallel-processor-rs"

[dependencies]
byteorder = "1.4.3"
crossbeam = "0.8.2"
filebuffer = "0.4.0"
lazy_static = "1.4.0"
libc = "0.2.142"
parking_lot = { version = "0.12.1", features = ["arc_lock", "send_guard"] }
rand = "0.8.5"
rayon = "1.7.0"
replace_with = "0.1.7"
unchecked-index = "0.2.2"
nightly-quirks = "0.1.4"

# Memory tracking
dashmap = { version = "5.4.0", features = ["serde"] }
serde = "1.0.160"
serde_json = "1.0.96"
backtrace = "0.3.67"
desse = "0.2.1"
bincode = "1.3.3"
lz4 = "1.24.0"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread", "rt", "sync"] }
mt-debug-counters = "0.1.3"
thiserror = "1.0.40"
procfs = { version = "0.15.1", optional = true }

[dev-dependencies]
tokio-scoped = "0.2.0"
voracious_radix_sort = { version = "1.2.0", features = ["voracious_multithread"] }


[features]
no-stats = []
memory-guards = []
track-usage = []
process-stats = ["procfs"]
