[workspace]


[package]
name = "parallel-processor"
version = "0.1.24"
authors = ["Andrea Cracco <guilucand@gmail.com>"]
edition = "2021"
categories = []
description = "Framework to manage asynchronous execution of multiple compute units communicating using messages"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Guilucand/parallel-processor-rs"

[dependencies]
byteorder = "1.5.0"
crossbeam = "0.8.4"
filebuffer = "1.0.0"
libc = "0.2.155"
parking_lot = { version = "0.12.3", features = ["arc_lock", "send_guard"] }
rand = "0.8.5"
rayon = "1.10.0"
replace_with = "0.1.7"
unchecked-index = "0.2.2"
nightly-quirks = "0.1.4"

# Memory tracking
dashmap = { version = "6.0.1", features = ["serde"] }
serde = "1.0.203"
serde_json = "1.0.118"
backtrace = "0.3.73"
desse = "0.2.1"
bincode = "1.3.3"
lz4 = "1.25.0"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "rt", "sync"] }
mt-debug-counters = "0.1.3"
thiserror = "1.0.61"
procfs = { version = "0.16.0", optional = true }
page_size = "0.6.0"
arc-swap = "1.7.1"
once_cell = "1.20.2"
limits-rs = "0.2.0"

[dev-dependencies]
tokio-scoped = "0.2.0"
voracious_radix_sort = { version = "1.2.0", features = ["voracious_multithread"] }


[features]
no-stats = []
memory-guards = []
track-usage = []
process-stats = ["procfs"]
